mb badge red contrast error fix darkmode

--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -286,7 +286,7 @@
   }
 
   & .mb-badge--red {
-    background-color: var(--green-18);
+    background-color: var(--green-15);
     color: var(--red-light);
   }
 
